--- a/server/server/templates/test.html
+++ b/server/server/templates/test.html
@@ -1,7 +1,9 @@
-<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io();
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js" integrity="sha512-gVG6WRMUYFaIdoocaxbqd02p3DUbhReTBWc7NTGB96i7vONrr7GuCZJHFFmkXEhpwilIWUnfRIMSlKaApwd/jg==" crossorigin="anonymous"></script><script type="text/javascript" charset="utf-8">
+    var socket = io('ws://localhost:5000');
     socket.on('connect', function() {
-        socket.emit('message', {data: 'I\'m connected!'});
+        setInterval(function(){
+            socket.emit('message', {data: 'I\'m connected!'});
+
+        }, 1000)
     });
 </script>
