--- a/client/src/ChatBox.css
+++ b/client/src/ChatBox.css
@@ -1,5 +1,6 @@
 .app-chatbox {
-    background-color: #dddddd;
+    background-color:rgba(0,0,0,0.5);
+    backdrop-filter: blur(5px);
     height: 100%;
     width: 100%;
     display: flex;
@@ -10,6 +11,7 @@
     padding: 2rem;
     display: flex;
     justify-content: center;
+    color: #ffffff;
     align-items: center;
     font-size: 2rem;
 }
@@ -17,15 +19,16 @@
 .app-chatbox .chatWindow {
     height: 100%;
     width: 100%;
-    background-color:#ccc;
+    background-color:rgba(0,0,0,0);
     overflow:auto;
+    color:#ffffff;
     font-size: 1rem;
     padding: 1rem;
 }
 
 .app-chatbox .messageBox {
     display: flex;
-    padding: .5rem;
+    padding: 0.5rem;
     padding-bottom: 1rem;
 
 }
@@ -33,5 +36,7 @@
 .app-chatbox .messageBox .messageInput {
     width: 100%;
     height: 5rem;
-    margin-right: .5rem;
+    background-color: rgba(0,0,0,0.75);
+    color: white;
+    margin-right:s .5rem;
 }
