--- a/client/src/ChatBox.css
+++ b/client/src/ChatBox.css
@@ -1,10 +1,10 @@
 .app-chatbox {
     background-color:rgba(0,0,0,0.5);
     backdrop-filter: blur(5px);
-    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: stretch;
 }
 
 .app-chatbox .header {
