--- a/client/src/Town.css
+++ b/client/src/Town.css
@@ -29,3 +29,18 @@
     background-color: rgba(0, 0, 0, 0); /* Black background with opacity */
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   }
+
+  .app-town #video-grid {
+      height: 100vh;
+      width: 100%;
+      background-color: #111111;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-auto-rows: 300px;
+  }
+
+  .app-town video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
