--- a/client/src/Town.css
+++ b/client/src/Town.css
@@ -44,3 +44,40 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .app-landing {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    background-color: #222;
+    background-image: url('landingback.png');
+    background-size: cover;
+  }
+
+  .form-container {
+    flex: 0 0 40%;
+    margin-left: 5rem;
+    height: 100%;
+    /* background-color: rgba(12, 233, 34, 0.1); */
+
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .app-join-form {
+    box-sizing: border-box;
+    padding: 5rem;
+    width: 50%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 3px;
+    box-shadow: 0px 0px 10px #222222;
+  }
