--- a/client/src/Town.css
+++ b/client/src/Town.css
@@ -21,13 +21,33 @@
 #overlay {
     position: absolute;
     width: 20%;
-    height: 100vh; 
+    height: 100vh;
     top: 0;
     right: 0;
 
     bottom: 0;
     background-color: rgba(0, 0, 0, 0); /* Black background with opacity */
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  }
+
+  .options-overlay {
+    position: absolute;
+    height: 100px;
+    width: 300px;
+    bottom: 1rem;
+    right: 50%;
+    transform: translateX(50%);
+    z-index: 2;
+    background-color: white;
+    border-radius: 1rem;
+    background-color:rgba(0,0,0,0.9);
+    backdrop-filter: blur(5px);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
   }
 
   .app-town #video-grid {
