--- a/client/src/ChatBox.css
+++ b/client/src/ChatBox.css
@@ -1,10 +1,16 @@
 .app-chatbox {
-    background-color:rgba(0,0,0,0.5);
+    background-color:rgba(0,0,0,0.7);
+    border-radius: 1rem;
     backdrop-filter: blur(5px);
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
+}
+
+.app-chatbox-dark {
+    background-color: #cccccc;
 }
 
 .app-chatbox .header {
@@ -14,6 +20,12 @@
     color: #ffffff;
     align-items: center;
     font-size: 2rem;
+}
+
+.app-chatbox-dark .header {
+    color: black;
+    display: flex;
+    flex-direction: column;
 }
 
 .app-chatbox .chatWindow {
@@ -26,17 +38,33 @@
     padding: 1rem;
 }
 
+.app-chatbox .chatWindow {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.app-chatbox-dark .chatWindow {
+    color: black;
+}
+
 .app-chatbox .messageBox {
     display: flex;
     padding: 0.5rem;
     padding-bottom: 1rem;
-
 }
 
 .app-chatbox .messageBox .messageInput {
     width: 100%;
     height: 5rem;
-    background-color: rgba(0,0,0,0.75);
+    background-color: #111111;
+    border-radius: 1rem;
+    padding: .5rem;
     color: white;
     margin-right:s .5rem;
+    outline: none;
+}
+
+.app-chatbox-dark .messageBox .messageInput  {
+    background-color: white;
+    color: black;
 }
