--- a/client/src/Town.css
+++ b/client/src/Town.css
@@ -9,7 +9,7 @@
 }
 
 .app-town .app-chat {
-    height: 100%;
+    height: 94%;
     margin: 30px;
 }
 
@@ -20,7 +20,7 @@
 
 #overlay {
     position: absolute;
-    width: 20%;
+    width: 23%;
     height: 100vh;
     top: 0;
     right: 0;
@@ -34,7 +34,7 @@
     position: absolute;
     height: 100px;
     width: 300px;
-    bottom: 1rem;
+    bottom: 30px;
     right: 50%;
     transform: translateX(50%);
     z-index: 2;
